Fix status layout on mobile. Add calendar.

--- a/assets/scss/termo-status.scss
+++ b/assets/scss/termo-status.scss
@@ -4,13 +4,13 @@
 }
 
 .thermo-status--house-icon {
-	font-size: 23rem;
+	font-size: 22rem;
 	font-weight: 100;
 }
 
 .thermo-status--icon {
 	position: absolute;
-	left: 98px;
+	left: 90px;
 	top: 30px;
 	font-size: 4.5rem;
 }
@@ -30,7 +30,7 @@
 
 	.thermo-status--value {
 		position: absolute;
-		left: 69px;
+		left: 61px;
 	}
 
 	.thermo-status--temp {
@@ -46,7 +46,6 @@
 
 .thermo-status--outside {
 	display: inline-block;
-	padding-right: 10px;
 
 	i {
 		font-size: 3rem;
